2010-11-27  Bernhard Walle <bernhard@bwalle.de>

	* Doxygen fixes.
	* Move everything into 'bw' namespace.
	* Use "git describe" to build the version hash.
	* Change the documentation to include <libbw/header.h> instead of
	  <header.h>.

2010-03-21  Bernhard Walle <bernhard@bwalle.de>

	* Remove 'using', use 'std::' explicitely.

2009-09-26  Bernhard Walle <bernhard@bwalle.de>

	* Change license in the header of stringutil.{h,cc} to BSD.
	* Add completion interface.

2009-09-20  Bernhard Walle <bernhard@bwalle.de>

	* Initial version.
	* Add stringutil.